{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 529,
  "lineage": "c9412d7b-7561-46da-cc20-0bd48e64e445",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_gw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08edc2e6f6e8909db",
            "domain": "vpc",
            "id": "eipalloc-08edc2e6f6e8909db",
            "network_border_group": "ap-southeast-1",
            "private_dns": "ip-10-0-1-245.ap-southeast-1.compute.internal",
            "public_dns": "ec2-13-213-118-197.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.118.197",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e58ba68c16422786",
            "domain": "vpc",
            "id": "eipalloc-0e58ba68c16422786",
            "network_border_group": "ap-southeast-1",
            "private_dns": "ip-10-0-2-123.ap-southeast-1.compute.internal",
            "public_dns": "ec2-13-215-235-155.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.235.155",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07477eebfae5f0f3f",
            "domain": "vpc",
            "id": "eipalloc-07477eebfae5f0f3f",
            "network_border_group": "ap-southeast-1",
            "private_dns": "ip-10-0-3-125.ap-southeast-1.compute.internal",
            "public_dns": "ec2-54-169-235-112.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.235.112",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:internet-gateway/igw-0040f08dac212efe4",
            "id": "igw-0040f08dac212efe4",
            "owner_id": "972111001561",
            "tags": {
              "Name": "Internet gateway"
            },
            "tags_all": {
              "Name": "Internet gateway"
            },
            "vpc_id": "vpc-0d69da3a8d7c9faef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08edc2e6f6e8909db",
            "connectivity_type": "public",
            "id": "nat-0913b25d1c406fe92",
            "network_interface_id": "eni-0eace4ddecacb716f",
            "private_ip": "10.0.1.132",
            "public_ip": "13.213.118.197",
            "subnet_id": "subnet-003846e51842119eb",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e58ba68c16422786",
            "connectivity_type": "public",
            "id": "nat-09279824092d1058a",
            "network_interface_id": "eni-0f83a080e436d1268",
            "private_ip": "10.0.2.230",
            "public_ip": "13.215.235.155",
            "subnet_id": "subnet-0d25e73d3af899ac8",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07477eebfae5f0f3f",
            "connectivity_type": "public",
            "id": "nat-0984a790f58939c9d",
            "network_interface_id": "eni-0f1caa7e380b2d02b",
            "private_ip": "10.0.3.106",
            "public_ip": "54.169.235.112",
            "subnet_id": "subnet-0c9efc61ddcdee8b6",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_nat_gw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_private_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05e6efdc4e03f743a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0913b25d1c406fe92",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e6efdc4e03f743a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_nat_gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.route_table_private_subnet",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00336a0e9dacc9afa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09279824092d1058a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00336a0e9dacc9afa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_nat_gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.route_table_private_subnet",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-034705e0635fc747e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0984a790f58939c9d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-034705e0635fc747e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_nat_gw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.route_table_private_subnet",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0040f08dac212efe4",
            "id": "r-rtb-0848587b89681901a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0848587b89681901a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table_public_subnet",
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:route-table/rtb-05e6efdc4e03f743a",
            "id": "rtb-05e6efdc4e03f743a",
            "owner_id": "972111001561",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d5ea5b83e09470e0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route table private subnet"
            },
            "tags_all": {
              "Name": "Route table private subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d69da3a8d7c9faef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:route-table/rtb-00336a0e9dacc9afa",
            "id": "rtb-00336a0e9dacc9afa",
            "owner_id": "972111001561",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f20542a3d9114d0c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route table private subnet"
            },
            "tags_all": {
              "Name": "Route table private subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d69da3a8d7c9faef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:route-table/rtb-034705e0635fc747e",
            "id": "rtb-034705e0635fc747e",
            "owner_id": "972111001561",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04f96c4d81bf60c92",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route table private subnet"
            },
            "tags_all": {
              "Name": "Route table private subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d69da3a8d7c9faef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:route-table/rtb-0848587b89681901a",
            "id": "rtb-0848587b89681901a",
            "owner_id": "972111001561",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0040f08dac212efe4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route table public subnet"
            },
            "tags_all": {
              "Name": "Route table public subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d69da3a8d7c9faef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_private_subnet_association",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0577d9eb22c639478",
            "route_table_id": "rtb-05e6efdc4e03f743a",
            "subnet_id": "subnet-080f74661ff2bd58d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table_private_subnet",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d4abd0c0ae32517",
            "route_table_id": "rtb-00336a0e9dacc9afa",
            "subnet_id": "subnet-0926779cd05f3aa7e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table_private_subnet",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0428819eedbfa9905",
            "route_table_id": "rtb-034705e0635fc747e",
            "subnet_id": "subnet-0118fd36b5e907157"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table_private_subnet",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public_subnet_association",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06781573b3cde58e2",
            "route_table_id": "rtb-0848587b89681901a",
            "subnet_id": "subnet-003846e51842119eb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table_public_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db556dc16b4eb906",
            "route_table_id": "rtb-0848587b89681901a",
            "subnet_id": "subnet-0d25e73d3af899ac8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table_public_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dbc50804a984115",
            "route_table_id": "rtb-0848587b89681901a",
            "subnet_id": "subnet-0c9efc61ddcdee8b6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table_public_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:subnet/subnet-080f74661ff2bd58d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080f74661ff2bd58d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972111001561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS private subnet 1"
            },
            "tags_all": {
              "Name": "EKS private subnet 1"
            },
            "vpc_id": "vpc-0d69da3a8d7c9faef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:subnet/subnet-0926779cd05f3aa7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0926779cd05f3aa7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972111001561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS private subnet 2"
            },
            "tags_all": {
              "Name": "EKS private subnet 2"
            },
            "vpc_id": "vpc-0d69da3a8d7c9faef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:subnet/subnet-0118fd36b5e907157",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0118fd36b5e907157",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972111001561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS private subnet 3"
            },
            "tags_all": {
              "Name": "EKS private subnet 3"
            },
            "vpc_id": "vpc-0d69da3a8d7c9faef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:subnet/subnet-003846e51842119eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003846e51842119eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "972111001561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS public subnet 1",
              "kubernetes.io/cluster/hiitfigure": "shared"
            },
            "tags_all": {
              "Name": "EKS public subnet 1",
              "kubernetes.io/cluster/hiitfigure": "shared"
            },
            "vpc_id": "vpc-0d69da3a8d7c9faef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:subnet/subnet-0d25e73d3af899ac8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d25e73d3af899ac8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "972111001561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS public subnet 2",
              "kubernetes.io/cluster/hiitfigure": "shared"
            },
            "tags_all": {
              "Name": "EKS public subnet 2",
              "kubernetes.io/cluster/hiitfigure": "shared"
            },
            "vpc_id": "vpc-0d69da3a8d7c9faef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:subnet/subnet-0c9efc61ddcdee8b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9efc61ddcdee8b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "972111001561",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "EKS public subnet 3",
              "kubernetes.io/cluster/hiitfigure": "shared"
            },
            "tags_all": {
              "Name": "EKS public subnet 3",
              "kubernetes.io/cluster/hiitfigure": "shared"
            },
            "vpc_id": "vpc-0d69da3a8d7c9faef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks_vpc",
            "module.vpc.data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:972111001561:vpc/vpc-0d69da3a8d7c9faef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04a712f72fcb6307a",
            "default_route_table_id": "rtb-070a0e1ac74b90e45",
            "default_security_group_id": "sg-0997b01389ef047e1",
            "dhcp_options_id": "dopt-02ce063f3b5bf5533",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d69da3a8d7c9faef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-070a0e1ac74b90e45",
            "owner_id": "972111001561",
            "tags": {
              "Name": "EKS VPC"
            },
            "tags_all": {
              "Name": "EKS VPC"
            }
          }
        }
      ]
    }
  ]
}